# HippoModel

./: CMakeLists.txt  Connection.h  InitializeSimplex.h  Izhi_single_neuron_Brian.py  Nelder_Mead_Opt.h  Nelder_Mead_Opt_EI.h  Nelder_Mead_Opt_update.h  ProgressiveEI.h  README.md  hippomodel.example.toml  main_dg_test_Nelder_Mead.cpp  main_dg_test_SimpleCaseNMTest.cpp
LargeScaleCA1/: demoOAT.m  generateCONFIGStateSTP.h  generateSETUPStateSTP.h  main_ca1_test _current_stim.cpp  main_ca1_test.cpp  main_ca1_test_random_input.cpp
LargeScaleCA3/: demoOAT.m  generateCONFIGStateSTP.h  generateCONFIGStateSTP_x1 (spk-from-file).h  generateCONFIGStateSTP_x1.h  generateCONFIGStateSTP_x3.h  generateCONFIGStateSTP_x4.h  generateSETUPStateSTP.h  main_ca3_test _current_stim.cpp  main_ca3_test.cpp  main_ca3_test_random_input.cpp
TwoNeuronDynamics/: Izhi_single_neuron_py.py  calculateEPSPwidth.m  execute_EPSPopt.m  execute_izhi.m  izhikevich_postsynaptic_neuron.m  izhikevich_presynaptic_neuron.m  objectiveFunction.m  plot_IzhiPattern.m  plot_conn_PSP.m  plot_conn_PSP_cross_region.m  plot_conn_PSP_izhi_local.m  plot_conn_PSP_local.m
include/hippomodel/analysis/: Correlation.h  FiringRate.h  PSD.h
include/hippomodel/config/: RuntimeConfig.h
include/hippomodel/core/: Region.h
include/hippomodel/io/: CA1ConnectivityLoader.h  CA3ConnectivityLoader.h  ConnectivityData.h  DGConnectivityLoader.h
include/hippomodel/loss/: CA1Evaluator.h  CA3Evaluator.h  DGEvaluator.h  EvaluationResult.h
include/hippomodel/network/: CA1ConnectionGenerator.h  CA1NetworkBuilder.h  CA1NetworkContext.h  CA3ConnectionGenerator.h  CA3NetworkBuilder.h  CA3NetworkContext.h  DGConnectionGenerator.h  DGNetworkBuilder.h  DGNetworkContext.h
include/hippomodel/optimizer/: NelderMeadLegacyGD.h  OptimizationLogger.h  ProgressiveEI.h  SimplexGenerator.h
include/hippomodel/region/CA1/: CA1ConnectionSetup.h  CA1ModelSetup.h  CA1OptimizationBounds.h  CA1RegionSpec.h
include/hippomodel/region/CA3/: CA3ConnectionSetup.h  CA3ModelSetup.h  CA3OptimizationBounds.h  CA3RegionSpec.h
include/hippomodel/region/DG/: DGConnectionSetup.h  DGModelSetup.h  DGOptimizationBounds.h  DGRegionSpec.h  InitializeSimplexDG.h  generateVerticesDG.h
include/hippomodel/user/: ProjectSelection.h
include/hippomodel/workflow/: OptimizeWorkflow.h  RunWorkflow.h  WorkflowArgs.h
src/: main_largescalemodel_scale10.cpp
src/analysis/: Correlation.cpp  FiringRate.cpp  PSD.cpp
src/config/: RuntimeConfig.cpp
src/io/: CA1ConnectivityLoader.cpp  CA3ConnectivityLoader.cpp  DGConnectivityLoader.cpp
src/loss/: CA1Evaluator.cpp  CA3Evaluator.cpp  DGEvaluator.cpp
src/network/: CA1ConnectionGenerator.cpp  CA1NetworkBuilder.cpp  CA3ConnectionGenerator.cpp  CA3NetworkBuilder.cpp  DGConnectionGenerator.cpp  DGNetworkBuilder.cpp
src/optimizer/: OptimizationLogger.cpp
src/region/CA1/: CA1BaselineWeights.cpp  CA1ConnectionSetup.cpp  CA1GroupSetup.cpp  CA1ModelSetup.cpp  CA1OptimizationBounds.cpp  CA1RegionSpec.cpp
src/region/CA3/: CA3BaselineWeights.cpp  CA3ConnectionSetup.cpp  CA3GroupSetup.cpp  CA3ModelSetup.cpp  CA3OptimizationBounds.cpp  CA3RegionSpec.cpp
src/region/DG/: DGBaselineWeights.cpp  DGConnectionSetup.cpp  DGGroupSetup.cpp  DGModelSetup.cpp  DGOptimizationBounds.cpp  DGRegionSpec.cpp
src/workflow/: OptimizeWorkflow.cpp  RunWorkflow.cpp  WorkflowArgs.cpp
tools/: main_optimize.cpp  main_run.cpp
